syntax = "proto3";

package policy;
option go_package = "/policypb";

message PolicyRequest {
  string module = 1;
  string data = 2;
}

message PolicyResponse {
  string message = 1;
  int32 status = 2;
}

service PolicyService {
  rpc SetPolicy(PolicyRequest) returns (PolicyResponse) {};
}